[package]
name = "make-mame-zip"
version = "0.1.0"
authors = ["Jan Larres <jan@majutsushi.net>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.38"
dirs = "4.0.0"
indicatif = "0.16.2"
itertools = "0.10.1"
lazy_static = "1.4.0"
quick-xml = { version = "0.31.0", features = ["serialize"] }
rusqlite = "0.27.0"
serde = { version = "1.0.123", features = ["derive"] }
structopt = "0.3.21"
zip = "0.5.13"
